--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -13,8 +13,8 @@
           Added the 'action' to the form tag.
       =========================================
     -->
-    <form id="addProductForm" 
-          action="{{ url_for('add_product_action') }}" 
+    <form id="add_product" 
+          action="{{ url_for('add_product') }}" 
           method="POST" 
           enctype="multipart/form-data">
         
@@ -50,3 +50,4 @@ function previewImage(event) {
 }
 </script>
 {% endblock %}
+
